--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-w3schools.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
@@ -59,7 +59,7 @@
  <div class="w3-bar w3-theme-d2 w3-left-align">
 
 <div id="navbar">
-  <a href="#header" class="w3-bar-item w3-button w3-ultra-violet"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
+  <a href="#header" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
 
   <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
@@ -106,7 +106,6 @@
             </video>
            
             </div>
-            <a href="#aboutinformation"><button class="btn"><center>Enter the Website</center></button></a>
 
         </div>
 
@@ -358,9 +357,6 @@ for (i = 0; i < acc.length; i++) {
 
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
 
-  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
-
-  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
 
   <a class="w3-button w3-large w3-teal w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 
