--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
   background-color: #ccc; 
 }
 
+.MetroImportant {
+    font-family: "Arial", sans-serif;
+    color:w3-2018-ultra-violet !important;
+}
+
 .panel {
   padding: 0 18px;
   display: none;
@@ -51,7 +56,6 @@
 
 
 
-
 <!-- Navbar -->
 
 <div class="w3-top">
@@ -59,7 +63,7 @@
  <div class="w3-bar w3-theme-d2 w3-left-align">
 
 <div id="navbar">
-  <a href="#header" class="w3-bar-item w3-button w3-2018-ultra-violet !important "><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
+  <a href="#header" class="MetroImportant"><i class="fa fa-home w3-margin-right w3-2018-ultra-violet"></i>Metrohacks</a>
 
   <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
