--- a/index.html
+++ b/index.html
@@ -32,16 +32,9 @@
   font-size: 15px;
   transition: 0.4s;
 }
-
 .active, .accordion:hover {
   background-color: #ccc; 
 }
-
-.MetroImportant {
-    font-family: "Arial", sans-serif;
-    color:w3-2018-ultra-violet !important;
-}
-
 .panel {
   padding: 0 18px;
   display: none;
@@ -56,6 +49,7 @@
 
 
 
+
 <!-- Navbar -->
 
 <div class="w3-top">
@@ -63,7 +57,7 @@
  <div class="w3-bar w3-theme-d2 w3-left-align">
 
 <div id="navbar">
-  <a href="#header" class="MetroImportant"><i class="fa fa-home w3-margin-right w3-2018-ultra-violet"></i>Metrohacks</a>
+  <a href="#header" class="w3-bar-item w3-button w3-2018-ultra-violet !important "><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
 
   <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
@@ -167,7 +161,6 @@
 <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
-
 for (i = 0; i < acc.length; i++) {
   acc[i].addEventListener("click", function() {
     this.classList.toggle("active");
@@ -401,8 +394,6 @@ for (i = 0; i < acc.length; i++) {
   border-radius: 5px;
   text-align: center;
 }
-
-
 .enter .btn:hover {
   background-color: teal;
 }    
@@ -422,7 +413,6 @@ for (i = 0; i < acc.length; i++) {
   display: block;
   transition: top 0.3s;
 }
-
 #navbar a {
   float: left;
   display: block;
@@ -432,7 +422,6 @@ for (i = 0; i < acc.length; i++) {
   text-decoration: none;
   font-size: 17px;
 }
-
 #navbar a:hover {
   background-color: #ddd;
   color: black;
@@ -456,13 +445,11 @@ for (i = 0; i < acc.length; i++) {
   margin: 0 auto;
   display: block;
 }
-
 .button1 {
   background-color: white; 
   color: black; 
   border: 2px solid #4CAF50;
 }
-
 .button1:hover {
   background-color: #4CAF50;
   color: white;
@@ -472,13 +459,11 @@ for (i = 0; i < acc.length; i++) {
   position: relative;
   width: 50%;
 }
-
 .image {
   display: block;
   width: 100%;
   height: auto;
 }
-
 .overlay {
   position: absolute;
   top: 0;
@@ -491,11 +476,9 @@ for (i = 0; i < acc.length; i++) {
   transition: .5s ease;
   background-color: #008CBA;
 }
-
 .container:hover .overlay {
   opacity: 1;
 }
-
 .text {
   color: white;
   font-size: 20px;
@@ -518,7 +501,6 @@ for (i = 0; i < acc.length; i++) {
   justify-content: center;
   overflow: hidden;
 }
-
 .section h1 {
   text-align: center;
   font-size: 6rem;
@@ -528,14 +510,12 @@ for (i = 0; i < acc.length; i++) {
   z-index: 1;
   opacity: 0.7;
 }
-
 .video-container {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
 }
-
 .color-overlay {
   position: absolute;
   top: 0;
@@ -549,7 +529,6 @@ for (i = 0; i < acc.length; i++) {
 
 <script>
 window.onscroll = function() {myFunction()};
-
 function myFunction() {
   if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
     document.getElementById("myP").className = "test";
@@ -561,7 +540,6 @@ function myFunction() {
     
 // Script for side navigation
 window.onscroll = function() {scrollFunction()};
-
 function scrollFunction() {
   if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
     document.getElementById("navbar").style.top = "0";
@@ -569,56 +547,30 @@ function scrollFunction() {
     document.getElementById("navbar").style.top = "-50px";
   }
 }
-
   
 function w3_open() {
-
     var x = document.getElementById("mySidebar");
-
     x.style.width = "300px";
-
     x.style.paddingTop = "10%";
-
     x.style.display = "block";
-
 }
-
-
-
 // Close side navigation
-
 function w3_close() {
-
     document.getElementById("mySidebar").style.display = "none";
-
 }
-
-
-
 // Used to toggle the menu on smaller screens when clicking on the menu button
-
 function openNav() {
-
     var x = document.getElementById("navDemo");
-
     if (x.className.indexOf("w3-show") == -1) {
-
         x.className += " w3-show";
-
     } else { 
-
         x.className = x.className.replace(" w3-show", "");
-
     }
-
 }
-
     var vid = document.getElementById("myVideo");
-
 function getPlaySpeed() { 
   alert(vid.playbackRate);
 } 
-
 function setPlaySpeed() { 
   vid.playbackRate = 0.5;
 } 
@@ -631,4 +583,3 @@ function setPlaySpeed() {
 </body>
 
 </html>
-
