--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
  <div class="w3-bar w3-theme-d2 w3-left-align">
 
 <div id="navbar">
-  <a href="#header" class="w3-bar-item w3-button w3-2018-ultra-violet !important "><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
+  <a href="#header" class="w3-bar-item w3-button" style="background-color:rgb(95, 75, 139);"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
 
   <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
