--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  <div class="w3-bar w3-theme-d2 w3-left-align">
 
 <div id="navbar">
-  <a href="#header" class="w3-bar-item w3-button w3-2018-ultra-violet !important "><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
+<a href="#header" class="w3-bar-item w3-button" style="background-color:rgb(95, 75, 139);"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
 
   <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
@@ -78,15 +78,17 @@
 
   <!-- Navbar on small screens -->
 
-  <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
+  <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium"  style="background-color:rgb(95, 75, 139);">
+  
+      <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
-    <a href="#team" class="w3-bar-item w3-button">Team</a>
+  <a href="#Metrohacks4" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Metrohacks IV</a>
+    
+  <a href="#WomensEvent" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Women's Event</a>  
+   
+  <a href="#sponsors" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Sponsors and Partners</a>
 
-    <a href="#work" class="w3-bar-item w3-button">Work</a>
-
-    <a href="#pricing" class="w3-bar-item w3-button">Price</a>
-
-    <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
 
 
   </div>
