--- a/index.html
+++ b/index.html
@@ -324,9 +324,11 @@ for (i = 0; i < acc.length; i++) {
 
     </div>
     </div>
-  <!-- Team Bios Container -->  
+    <!-- Team Bios Container -->  
     <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="team bios">
-        <h1> Team Bios </h1>
+       <div class="w3-container w3-padding-64 w3-center" id="WomensEvent">
+           <h1> Team Bios </h1>
+        </div>
 
   <div class="w3-third w3-margin-bottom">
 <div class="container">
