--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ for (i = 0; i < acc.length; i++) {
 <h2> Women's Event </h2>
 
     
-<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>    
+<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus"  style="background-color:rgb(95, 75, 139);">Register</button>    
 <!-- Team Container -->
 
 <div class="w3-container w3-padding-64 w3-center" id="Metrohacks4">
