--- a/index.html
+++ b/index.html
@@ -193,15 +193,14 @@ for (i = 0; i < acc.length; i++) {
 <h2> Women's Event </h2>
 
     
-<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus"  style="background-color:rgb(95, 75, 139);">Register</button>    
+<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>    
 <!-- Team Container -->
 
-<div class="w3-container w3-padding-64 w3-center" id="Metrohacks4">
 
-<h2>Metrohacks IV</h2>
+
     
     <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
-
+        <h2><center>Metrohacks IV</center></h2>
     <center>
       <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
       <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>
