--- a/index.html
+++ b/index.html
@@ -326,10 +326,9 @@ for (i = 0; i < acc.length; i++) {
     </div>
     </div>
     <!-- Team Bios Container -->  
-    <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="team bios">
-       <div class="w3-container w3-padding-64 w3-center" id="WomensEvent">
+       <div class="w3-container w3-padding-64 w3-theme-l1 w3-center" id="WomensEvent">
            <h1> Team Bios </h1>
-        </div>
+        
 
   <div class="w3-third w3-margin-bottom">
 <div class="container">
