--- a/index.html
+++ b/index.html
@@ -188,11 +188,10 @@ for (i = 0; i < acc.length; i++) {
  
 <!-- Team Container -->
 
-    <div class="w3-container w3-padding-64 w3-center" id="Metrohacks4">
-<h2>Metrohacks IV</h2>
+
     
-    <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
-   
+    <div class="w3-row-padding w3-padding-64 w3-center w3-theme-l1" id="header">
+   <h2>Metrohacks IV</h2>
     <center>
       <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
       <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>
