--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ for (i = 0; i < acc.length; i++) {
 <!-- Team Container -->
 
 
-    
-    <div class="w3-row-padding w3-padding-64 w3-center w3-theme-l1" id="header">
+
+    <div class="w3-container w3-padding-64 w3-theme-l1 w3-center" id="header">
    <h2>Metrohacks IV</h2>
     <center>
       <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
