--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ for (i = 0; i < acc.length; i++) {
     <div class="w3-container w3-padding-64 w3-theme-l1 w3-center" id="header">
    <h2>Metrohacks IV</h2>
     <center>
-      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-purple" title="Prospectus">Mentor</button>
-      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-purple" title="Prospectus">Register</button>
-      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-purple" title="Prospectus">Sponsor</button>
+      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-mediumpurple" title="Prospectus">Mentor</button>
+      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-mediumpurple" title="Prospectus">Register</button>
+      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-mediumpurple" title="Prospectus">Sponsor</button>
     </center>
   </div>
     
@@ -207,7 +207,7 @@ for (i = 0; i < acc.length; i++) {
 <h2> Women's Event </h2>
 
     
-<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>    
+<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-mediumpurple" title="Prospectus">Register</button>    
 
 
 <div class="w3-container w3-padding-64 w3-center" id="sponsors">
@@ -477,11 +477,11 @@ for (i = 0; i < acc.length; i++) {
 .button1 {
   background-color: white; 
   color: black; 
-  border: 2px solid #4CAF50;
+  border: 2px solid #9370DB;
 }
 
 .button1:hover {
-  background-color: #4CAF50;
+  background-color: #9370DB;
   color: white;
 }
   
@@ -506,7 +506,7 @@ for (i = 0; i < acc.length; i++) {
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #008CBA;
+  background-color: #9370DB;
 }
 
 .container:hover .overlay {
