--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <p style="color:#FFFFFF", style="font-family:courier"><center>MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</center></p>
 
-    <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="about"></div>
+    <div class="w3-row-padding w3-padding-64 w3-theme-l1 w3-hover-deep-purple" id="about"></div>
 
 <button class="accordion">Who can come?</button>
 <div class="panel">
@@ -193,9 +193,9 @@ for (i = 0; i < acc.length; i++) {
     <div class="w3-container w3-padding-64 w3-theme-l1 w3-center" id="header">
    <h2>Metrohacks IV</h2>
     <center>
-      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-blueviolet" title="Prospectus">Mentor</button>
-      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-blueviolet" title="Prospectus">Register</button>
-      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-blueviolet" title="Prospectus">Sponsor</button>
+      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-purple" title="Prospectus">Mentor</button>
+      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-purple" title="Prospectus">Register</button>
+      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-purple" title="Prospectus">Sponsor</button>
     </center>
   </div>
     
@@ -207,7 +207,7 @@ for (i = 0; i < acc.length; i++) {
 <h2> Women's Event </h2>
 
     
-<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-blueviolet" title="Prospectus">Register</button>    
+<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-purple" title="Prospectus">Register</button>    
 
 
 <div class="w3-container w3-padding-64 w3-center" id="sponsors">
