--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <p style="color:#FFFFFF", style="font-family:courier"><center>MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</center></p>
 
-    <div class="w3-row-padding w3-padding-64 w3-theme-l1 w3-hover-deep-purple" id="about"></div>
+    <div class="w3-row-padding w3-padding-64 w3-theme-l1 w3-hover-purple" id="about"></div>
 
 <button class="accordion">Who can come?</button>
 <div class="panel">
