--- a/index.html
+++ b/index.html
@@ -374,12 +374,12 @@ for (i = 0; i < acc.length; i++) {
 
   <h4>Follow Us</h4>
 
-  <a class="w3-button w3-large w3-theme w3-hover-blueviolet" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
+  <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
 
-  <a class="w3-button w3-large w3-theme w3-hover-blueviolet" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
+  <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
 
 
-  <a class="w3-button w3-large w3-theme w3-hover-blueviolet" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+  <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 
 
 
