--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
     <div class="w3-row-padding w3-padding-64 w3-theme-l1 " id="about"></div>
 
-<button class="accordion">Who can come?</button>
-<div class="panel w3-hover-purple">
+<button class="accordion w3-hover-purple">Who can come?</button>
+<div class="panel">
   <p class="w3-text-white">All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</p>
 </div>
 
@@ -140,7 +140,7 @@
 </div>
     
 <button class="accordion">When is it?</button>
-<div class="panel">
+<div class="panel ">
   <p class="w3-text-white" style="background-color:rgb(95, 75, 139);">Saturday, February 23rd, 2019</p>
 </div>
     
@@ -374,12 +374,12 @@ for (i = 0; i < acc.length; i++) {
 
   <h4>Follow Us</h4>
 
-  <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
+  <a class="w3-button w3-large w3-theme w3-hover-purple" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
 
-  <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
+  <a class="w3-button w3-large w3-theme w3-hover-purple" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
 
 
-  <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+  <a class="w3-button w3-large w3-theme w3-hover-purple" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 
 
 
