--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@ for (i = 0; i < acc.length; i++) {
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
 
-    <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>   
+    <span class="w3-text w3-padding w3-deep-purple w3-hide-small">Go To Top</span>   
 
-    <a class="w3-button w3-theme" href="#myPage"><span class="w3-xlarge">
+    <a class="w3-button w3-theme w3-hover-purple" href="#myPage"><span class="w3-xlarge">
 
     <i class="fa fa-chevron-circle-up"></i></span></a>
 
