--- a/index.html
+++ b/index.html
@@ -366,7 +366,9 @@ for (i = 0; i < acc.length; i++) {
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
 
   <h4>Follow Us</h4>
-
+    
+<center>
+    
   <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
 
   <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
@@ -375,7 +377,7 @@ for (i = 0; i < acc.length; i++) {
   <a class="w3-button w3-large w3-theme w3-hover-deep-purple" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 
 
-
+    </center>
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
 
