--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
   background-color: white;
   overflow: hidden;
 }
+    .center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
 </style>
     
   </head>
