--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ for (i = 0; i < acc.length; i++) {
 
   <div class="w3-quarter w3-margin-bottom">
 <div class="container">
-  <img src="https://static.slickdealscdn.com/attachment/3/5/9/4/0/2/8/7195191.attach" alt="Avatar" class="image" >
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/JetBrains_Logo_2016.svg/220px-JetBrains_Logo_2016.svg.png" alt="Avatar" class="image" >
   <div class="overlay">
     <div class="text">Hello World</div>
   </div>
