--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
   background-color: white;
   overflow: hidden;
 }
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.responsive {
+  max-width: 100%;
+  height: auto;
 }
 }
 </style>
@@ -112,7 +110,7 @@
         <div class="enter">
         <div class="video-container">
             
-            <video id="myVideo" autoplay="" loop="" muted="" class="center">
+            <video id="myVideo" autoplay="" loop="" muted="" class="responsive">
                 <source src="MetroHacksLogoLoop.mp4" type="video/mp4">
             </video>
            
