--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 .responsive {
   max-width: 100%;
   height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 }
 </style>
