--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   overflow: hidden;
 }
 .responsive {
-  max-width: 100%;
+  width: 50%;
   height: auto;
   display: block;
   margin-left: auto;
