--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
   background-color: white;
   overflow: hidden;
 }
-.responsive {
-  width: 50%;
-  height: auto;
+.responsive  {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 50%;
 }
 }
 </style>
@@ -110,7 +109,7 @@
 
 <div class="section">
         
-
+        <div class="video-container">
         <div class="video-container">
             
             <video id="myVideo" autoplay="" loop="" muted="" class="responsive">
