--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-//Code by the 2018 MH website team: @shrujalambati, @AbbySherman123, and @Jackdm
+<!––Code by the 2018 MH website team: @shrujalambati, @AbbySherman123, and @Jackdm-->
 
 <!DOCTYPE html>
 
