--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   width: auto;
   margin-left: auto;
   margin-right: auto;
+  max-width:100%;
+  max-height:100%;
 }
 }
 </style>
@@ -92,7 +94,7 @@
 
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium"  style="background-color:rgb(95, 75, 139);">
   
-      <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
+  <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
   <a href="#Metrohacks4" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Metrohacks IV</a>
     
