--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <!-- Image Header -->  
 
-<div class="section">
+<div class="panel">
         
         <div class="video-container">
             
