--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <!-- Image Header -->  
 
-<div class="w3-row-padding w3-padding-64 w3-theme-l1">
+<div class="w3-theme-l1">
         
         <div class="video-container">
             
