--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ for (i = 0; i < acc.length; i++) {
 <div class="container">
   <img src="https://botw-pd.s3.amazonaws.com/styles/logo-thumbnail/s3/042016/untitled-1_103.png?C1Kx9vbHdUsOu14DpRXMwK7zuFII2FO4&itok=nFYi4uog" alt="Avatar" class="image" height="50" width="200">
   <div class="overlay">
-    <div class="text">Hi, I’m Ellen, a sophomore at Newton South High School in Newton, Massachusetts. When I’m not coding, designing, or listening to aggressive amounts of Drake, I’m probably blogging, taking pictures for Instagram, or working on my digital media and marketing company, Elysia Media. I also play lacrosse, compete in congressional debate, lead my school’s Future Business Leaders of America chapter, and have a fatal weakness for cheese fries. </font></div>
+    <div class="text"><font size="2">Hi, I’m Ellen, a sophomore at Newton South High School in Newton, Massachusetts. When I’m not coding, designing, or listening to aggressive amounts of Drake, I’m probably blogging, taking pictures for Instagram, or working on my digital media and marketing company, Elysia Media. I also play lacrosse, compete in congressional debate, lead my school’s Future Business Leaders of America chapter, and have a fatal weakness for cheese fries. </font></div>
   </div>
 </div>
 </div>
@@ -342,7 +342,7 @@ for (i = 0; i < acc.length; i++) {
 <div class="container">
   <img src="https://botw-pd.s3.amazonaws.com/styles/logo-thumbnail/s3/042016/untitled-1_103.png?C1Kx9vbHdUsOu14DpRXMwK7zuFII2FO4&itok=nFYi4uog" alt="Avatar" class="image" height="50" width="200">
   <div class="overlay">
-    <div class="text"><font size="2">Hey, I'm Jack McCoy. I'm a Junior at Cape Cod Academy where I am on the varsity Cross Country and Sailing teams, as well as the president of both the Pink Ribbon and Human Rights clubs. My favorite hobbies are working on various electronics projects, running my clothing brand, playing video games (of course), and making short documentaries (the most notable being one with WHOI and NASA).</div>
+    <div class="text">Hey, I'm Jack McCoy. I'm a Junior at Cape Cod Academy where I am on the varsity Cross Country and Sailing teams, as well as the president of both the Pink Ribbon and Human Rights clubs. My favorite hobbies are working on various electronics projects, running my clothing brand, playing video games (of course), and making short documentaries (the most notable being one with WHOI and NASA).</div>
   </div>
 </div>
 </div>
