--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@ for (i = 0; i < acc.length; i++) {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+      <img src="Image from IOS.jpg" alt="Jane" style="width:100%">
       <div class="container">
-        <h2>Jane Doe</h2>
+        <h2>Sasha Hussain</h2>
         <p class="title">CEO & Founder</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>example@example.com</p>
@@ -343,9 +343,9 @@ for (i = 0; i < acc.length; i++) {
 
   <div class="column">
     <div class="card">
-      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
+      <img src="wheat.JPG" alt="Mike" style="width:100%">
       <div class="container">
-        <h2>Mike Ross</h2>
+        <h2>Ellen Yang</h2>
         <p class="title">Art Director</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>example@example.com</p>
@@ -355,9 +355,22 @@ for (i = 0; i < acc.length; i++) {
   </div>
   <div class="column">
     <div class="card">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+      <img src="ProfilePicture.jpg" alt="John" style="width:100%">
       <div class="container">
-        <h2>John Doe</h2>
+        <h2>Jack McCoy</h2>
+        <p class="title">Designer</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div>
+           <div class="column">
+    <div class="card">
+      <img src="Screen Shot 2018-12-30 at 6.02.00 PM.png" alt="John" style="width:100%">
+      <div class="container">
+        <h2>Rachael Mathew/h2>
         <p class="title">Designer</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>example@example.com</p>
@@ -598,12 +611,12 @@ html {
   color: white;
   font-size: 20px;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 40%;
+  left: 40%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  text-align: center;
+  text-align: left;
 }
   
   
