--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ for (i = 0; i < acc.length; i++) {
   <div class="column">
     <div class="card">
       <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-      <div class="containers">
+      <div class="boxes">
         <h2>Ellen Yang</h2>
 
         <p>Hi, I’m Ellen, a sophomore at Newton South High School in Newton, Massachusetts. When I’m not coding, designing, or listening to aggressive amounts of Drake, I’m probably blogging, taking pictures for Instagram, or working on my digital media and marketing company, Elysia Media. I also play lacrosse, compete in congressional debate, lead my school’s Future Business Leaders of America chapter, and have a fatal weakness for cheese fries. </p>
@@ -343,7 +343,7 @@ for (i = 0; i < acc.length; i++) {
   <div class="column">
     <div class="card">
       <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
-      <div class="containers">
+      <div class="boxes">
         <h2>Jack McCoy</h2>
         <p>Hey, I'm Jack McCoy. I'm a Junior at Cape Cod Academy where I am on the varsity Cross Country and Sailing teams, as well as the president of both the Pink Ribbon and Human Rights clubs. My favorite hobbies are working on various electronics projects, running my clothing brand, playing video games (of course), and making short documentaries (the most notable being one with WHOI and NASA).</p>
  <p><button class="buttons">Contact</button></p>
@@ -353,7 +353,7 @@ for (i = 0; i < acc.length; i++) {
   <div class="column">
     <div class="card">
       <img src="/w3images/team3.jpg" alt="John" style="width:100%">
-      <div class="containers">
+      <div class="boxes">
         <h2>Sasha Hussain</h2>
         <p>Hi, I’m Sasha Hussain and I attend Foxboro High School, in the town and home of the Patriots. I got into coding during my first hackathon, and have been doing it since. I love getting involved in my community by playing for my cross country, track, and lacrosse team or playing the violin for my symphony, string, and chamber orchestra. I’m involved in a couple of clubs in my school including science, math, MUN, model senate, and a club that I started called Pen in a Box. I will win any dance battle and am called the queen of rap. I’m super excited to help run this event and can’t wait to inspire other people to start coding through hackathons.</p>
     <p><button class="buttons">Contact</button></p>
@@ -364,7 +364,7 @@ for (i = 0; i < acc.length; i++) {
 <div class="column">
     <div class="card">
       <img src="/w3images/team3.jpg" alt="John" style="width:100%">
-      <div class="containers">
+      <div class="boxes">
         <h2>Rachael Mathew</h2>
         <p>Hi! I'm Rachael and I'm a senior at Lexington High School. I love coding, singing classical music and finding new leadership opportunities in my community. My goal is to major in computer science and possibly in engineering. My hope is to inspire more girls into the STEM field.</p>
        <p><button class="buttons">Contact</button></p>
@@ -449,11 +449,11 @@ html {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.containers {
+.boxes {
   padding: 0 16px;
 }
 
-.containers::after, .row::after {
+.boxes::after, .row::after {
   content: "";
   clear: both;
   display: table;
