--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ for (i = 0; i < acc.length; i++) {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+      <img src="wheat.JPG" alt="Jane" style="width:100%">
       <div class="boxes">
         <h2>Ellen Yang</h2>
 
@@ -342,7 +342,7 @@ for (i = 0; i < acc.length; i++) {
 
   <div class="column">
     <div class="card">
-      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
+      <img src="ProfilePicture.png" alt="Mike" style="width:100%">
       <div class="boxes">
         <h2>Jack McCoy</h2>
         <p>Hey, I'm Jack McCoy. I'm a Junior at Cape Cod Academy where I am on the varsity Cross Country and Sailing teams, as well as the president of both the Pink Ribbon and Human Rights clubs. My favorite hobbies are working on various electronics projects, running my clothing brand, playing video games (of course), and making short documentaries (the most notable being one with WHOI and NASA).</p>
@@ -352,7 +352,7 @@ for (i = 0; i < acc.length; i++) {
   </div>
   <div class="column">
     <div class="card">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+      <img src="Image from iOS.jpg" alt="John" style="width:100%">
       <div class="boxes">
         <h2>Sasha Hussain</h2>
         <p>Hi, I’m Sasha Hussain and I attend Foxboro High School, in the town and home of the Patriots. I got into coding during my first hackathon, and have been doing it since. I love getting involved in my community by playing for my cross country, track, and lacrosse team or playing the violin for my symphony, string, and chamber orchestra. I’m involved in a couple of clubs in my school including science, math, MUN, model senate, and a club that I started called Pen in a Box. I will win any dance battle and am called the queen of rap. I’m super excited to help run this event and can’t wait to inspire other people to start coding through hackathons.</p>
@@ -363,7 +363,7 @@ for (i = 0; i < acc.length; i++) {
 
 <div class="column">
     <div class="card">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+      <img src="Screen Shot 2018-12-30 at 6.02.00 PM.png" alt="John" style="width:100%">
       <div class="boxes">
         <h2>Rachael Mathew</h2>
         <p>Hi! I'm Rachael and I'm a senior at Lexington High School. I love coding, singing classical music and finding new leadership opportunities in my community. My goal is to major in computer science and possibly in engineering. My hope is to inspire more girls into the STEM field.</p>
