--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@ for (i = 0; i < acc.length; i++) {
   </div>
 </div>
     </div>
+    </div>
 <!-- Contact Container -->
 
 <div class="w3-container w3-padding-64 w3-theme-l5  w3-center" id="contact">
