--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ for (i = 0; i < acc.length; i++) {
 <div class="container">
   <img src="https://media.licdn.com/dms/image/C4D0BAQEEatBue0JMbQ/company-logo_200_200/0?e=2159024400&v=beta&t=Qkb9OQ9RjUQ2MVc4B4f_B223oshNxQeb2wu0M5Cit_0" alt="Avatar" class="image" >
   <div class="overlay">
-    <div class="text">250+ pens and 100 Stickers </div>
+      <div class="text"><font size="2">250+ pens and 100 Stickers </font></div>
   </div>
 </div>
     </div>
@@ -603,10 +603,10 @@ html {
   font-size: 20px;
   position: absolute;
   top: 40%;
-  left: 40%;
+  right: 40%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+    transform: translate(-100%, -50%);
   text-align: left;
 }
   
