--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ for (i = 0; i < acc.length; i++) {
 
     </div>        
 </div>
-    
+    </div>
     <!-- Team Bios Container -->  
      
 <div class="row">
