--- a/index.html
+++ b/index.html
@@ -45,14 +45,8 @@
   background-color: white;
   overflow: hidden;
 }
-.responsive  {
-  
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  max-width:100%;
-}
-}
+
+
 </style>
     
   </head>
@@ -282,7 +276,7 @@ for (i = 0; i < acc.length; i++) {
 <div class="container">
   <img src="https://emotiv-website-uploads-live.s3.amazonaws.com/uploads/2016/01/emotiv-epoc-plus.png" alt="Avatar" class="image" >
   <div class="overlay">
-    <div class="text">5 Shirts</div>
+      <div class="text"><font size="2">5 Shirts</font></div>
   </div>
 </div>
   </div>
