--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
   overflow: hidden;
 }
 
-
 </style>
     
   </head>
@@ -623,10 +622,16 @@ html {
 }
 
 .video-container {
+
+  
+
+  margin-left: auto;
+  margin-right: auto;
+
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  max-width: 100%;
     height:30%;
 }
 
