--- a/index.html
+++ b/index.html
@@ -629,11 +629,11 @@ html {
 
 
 
-  position: absolute;
+  position: relative;
   top: 0;
-  left: 0;
+
   max-width: 100%;
-    height:30%;
+    height:auto;
 }
 
 .color-overlay {
