--- a/index.html
+++ b/index.html
@@ -591,6 +591,7 @@ html {
 }
 
 .text {
+    display: block:
   color: white;
   font-size: 20px;
   position: absolute;
@@ -627,7 +628,7 @@ html {
 
   
 
-
+display: block;
 
   position: relative;
   top: 0;
