--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 <p style="color:#FFFFFF", style="font-family:courier"><center>MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</center></p>
 
     <div class="w3-row-padding w3-padding-64 w3-theme-l1 " id="about"></div>
+    
+    <center>
 
 <button class="accordion w3-hover-purple w3-white">Who can come?</button>
 <div class="panel  w3-deep-purple">
@@ -165,6 +167,8 @@
 <div class="panel w3-deep-purple">
   <p class="w3-text-white" style="color:rgb(95, 75, 139);">Hit us   up <a href="mailto:webmaster@example.com"> here.</a></p>
 </div>    
+        
+    </center>
 
 <script>
 var acc = document.getElementsByClassName("accordion");
