--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <p class="w3-text-black">All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</p>
 </div>
 
-<button class="accordion w3-hover-purple w3-white">How much does it cost?</button>
+<button class="accordion w3-hover-purple w3-white center">How much does it cost?</button>
 <div class="panel w3-deep-purple">
   <p class="w3-text-black">MetroHacks costs nothing. Registering and attending is free, and you get free food, t-shirts, prizes, swag and lessons.</p>
 </div>
