--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
   background-color: white;
   overflow: hidden;
 }
+  .button{
+      text-align: center;
+        font-size: 40px;
+        font-style: italic;
+  font-family: "Times New Roman", Times, serif;
+}
 
 </style>
     
