--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
 }
 .button{
   text-align: center;
-  font-size: 40px;
+  font-weight: bold;
+  font-size: 60px;
   font-style: italic;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Arial", Times, serif;
 }
 
 </style>
