--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 }
 .button{
   text-align: center;
-  font-weight: bold;
+  text-color: deep-purple;
   font-size: 100px;
   font-style: italic;
   font-family: "Arial", Times, serif;
@@ -246,8 +246,11 @@ for (i = 0; i < acc.length; i++) {
             <h1>Event Tracks</h1>
             
             <div class="newspaper">
+                <h2>Health</h2>
                 <p>Bring the doctor’s office into our homes! Projects on this track could utilize wearable technology for patient monitoring outside the clinic, or enable a patient to schedule a consultation with their doctor over an app. They are typically concerned with ensuring the well being of the user, either mentally, physically, emotionally, or all three.</P>
+                <h2>Environmental</h2>
                 <p>Build a project that would make Mother Nature proud. Projects on this track utilize technology, especially hardware, to combat some of the world’s most rapidly growing environmental issues including global warming, pollution, and the energy crisis.</P>
+                <h2>Civics</h2>
                 <p>Create a hack that leverages technology to improve the way our community, society, and government function. Projects that fall into this track often aim to unite different walks of society and enable users to take civic responsibility into their own hands. For example, tackle issues like voter turnout or develop tools to aid grassroots campaigns.</p>
             </div>
             
