--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   overflow: hidden;
 }
 .button{
-  text-align: center;
-  text-color: deep-purple;
+  text-align: center;  
+  color: deep-purple;
   font-size: 100px;
   font-style: italic;
   font-family: "Arial", Times, serif;
