--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 }
 .button{
   text-align: center;  
-  color: deep-purple;
+  color: purple;
   font-size: 100px;
   font-style: italic;
   font-family: "Arial", Times, serif;
