--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 <!-- Image Header -->  
 
-<div class="w3-container w3-padding-64 w3-theme-l1 w3-center">
+<div class="w3-container w3-padding-64 w3-theme-l1 w3-center" style="width:100%">
         
         <div class="video-container">
             
