--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+    
+video {
+  width: 100%;
+  height: auto;
+}
 .accordion {
   background-color: #eee;
   color: #444;
