--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <style>
     
 video {
-  width: 100%;
-  height: auto;
+  max-width: 100%;
+  max-height: auto;
 }
 .accordion {
   background-color: #eee;
