--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ video {
 
 <!-- Image Header -->  
 
-<div class="w3-container w3-padding-64 w3-theme-l1 w3-center">
+<div class="w3-theme-l1 w3-center">
         
         <div class="video-container">
             
