--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ video {
 .button{
   text-align: center;  
   color: purple;
-  font-size: 100px;
+  font-size: 160%;
   font-style: italic;
   font-family: "Arial", Times, serif;
 }
