--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ video {
   color: purple;
   font-size: 300%;
   font-style: italic;
-  font-family: "Arial", Times, serif;
+  font-family: "veranda", Times, serif;
 }
     .newspaper {
   -webkit-column-count: 3; /* Chrome, Safari, Opera */
