--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ video {
     .image {
   opacity: 1;
   display: block;
-  width: 100%;
-  height: auto;
+  min-width: 100%;
+  min-height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
 }
