--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@ video {
     .image {
   opacity: 1;
   display: block;
-  min-width: 100%;
-  min-height: auto;
+ 
   transition: .5s ease;
   backface-visibility: hidden;
 }
@@ -404,7 +403,7 @@ for (i = 0; i < acc.length; i++) {
   <div class="column">
       <div class="card">
             <div class="container">
-  <img src="wheat.JPG" alt="Avatar" class="image" >
+  <img src="wheat.JPG" alt="Ellen" class="image" >
   <div class="middle">
     <div class="text">Hi, I’m Ellen, a sophomore at Newton South High School in Newton, Massachusetts. When I’m not coding, designing, or listening to aggressive amounts of Drake, I’m probably blogging, taking pictures for Instagram, or working on my digital media and marketing company, Elysia Media. I also play lacrosse, compete in congressional debate, lead my school’s Future Business Leaders of America chapter, and have a fatal weakness for cheese fries.</div>
   </div>
@@ -423,6 +422,8 @@ for (i = 0; i < acc.length; i++) {
       </div>
     </div>
   </div>
+      
+      
   <div class="column">
     <div class="card">
       <img src="Image from iOS.jpg" alt="John" style="width:100%">
