--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ var countdownfunction = setInterval(function() {
    <h2>Metrohacks IV</h2>
     <center>
         
-        <p id="countdown" style="font-size:30px; font-style:courier;"></p>
+        <p class="w3-container" id="countdown" style="font-size:30px; font-family:courier;"></p>
         <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-deep-purple" title="Prospectus">Sponsor</button>
        
     </center>
