--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ var countdownfunction = setInterval(function() {
     
 
     <div class="w3-container w3-padding-64 w3-theme-l1 w3-center" id="Metrohacks4">
-   <h2>Metrohacks IV</h2>
+   <h2>Metrohacks IV Coming Soon!</h2>
     <center>
         
         <p class="w3-container w3-padding-32" id="countdown" style="font-size:30px; font-family:courier;"></p>
