--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ video {
 
 <!-- Image Header -->  
 
-<div class="w3-container w3-theme-l1 w3-center">
+<div class="w3-theme-l1 w3-center">
         
         <div class="video-container">
             
