--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ video {
 
 <div class="w3-theme-l1 w3-center">
         
-        <div class="video-container">
+        <div class="w3-container video-container">
             
             <video   autoplay muted loop>
                 <source src="MetroHacksLogoLoop.mp4" type="video/mp4">
