--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ var countdownfunction = setInterval(function() {
 
 <div class="w3-row-padding">
   <div class="w3-container w3-third">
-    <img src="img_snowtops.jpg" style="width:100%;cursor:pointer" 
+    <img src="wheat.JPG" style="width:100%;cursor:pointer" 
     onclick="onClick(this)" class="w3-hover-opacity">
   </div>
   <div class="w3-container w3-third">
