--- a/index.html
+++ b/index.html
@@ -429,8 +429,7 @@ var countdownfunction = setInterval(function() {
     <div class="w3-modal-content">
       <div class="w3-container">
         <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-        <p>Some text. Some text. Some text.</p>
-        <p>Some text. Some text. Some text.</p>
+          <p>Hi, I’m Ellen, a sophomore at Newton South High School in Newton, Massachusetts. When I’m not coding, designing, or listening to aggressive amounts of Drake, I’m probably blogging, taking pictures for Instagram, or working on my digital media and marketing company, Elysia Media. </p>
       </div>
     </div>
   </div>
@@ -440,7 +439,7 @@ var countdownfunction = setInterval(function() {
 <div class="w3-row-padding">
   <div class="w3-container w3-third">
     <img src="wheat.JPG" style="width:100%;cursor:pointer" 
-    onclick="document.getElementById('id01').style.display='block'" class="w3-hover-opacity">
+    onclick="document.getElementById('id01').style.display='block'" class="w3-hover-opacity w3-black">
   </div>
   <div class="w3-container w3-third">
     <img src="ProfilePicture.png" style="width:100%;cursor:pointer" 
