--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ var countdownfunction = setInterval(function() {
           <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright w3-white">&times;</span>
           <h2>Ellen Yang</h2>
       </div>
-      <div class="w3-container modal-body" style="font-family:courier; font-color:black;">
+      <div class="w3-container modal-body" style="font-family:courier; color:black;">
           <p>Hi, I’m Ellen, a sophomore at Newton South High School in Newton, Massachusetts. When I’m not coding, designing, or listening to aggressive amounts of Drake, I’m probably blogging, taking pictures for Instagram, or working on my digital media and marketing company, Elysia Media. </p>
       </div>
     </div>
@@ -443,7 +443,7 @@ var countdownfunction = setInterval(function() {
           <span onclick="document.getElementById('id02').style.display='none'" class="w3-button w3-display-topright w3-white">&times;</span>
           <h2>Jack McCoy</h2>
       </div>
-      <div class="w3-container" modal-body" style="font-family:courier; font-color:black;">
+      <div class="w3-container" modal-body" style="font-family:courier; color:black;">
           <p>Hey, I'm Jack McCoy. I'm a Junior at Cape Cod Academy where I am on the varsity Cross Country and Sailing teams, as well as the president of both the Pink Ribbon and Human Rights clubs.  </p>
       </div>
     </div>
@@ -455,7 +455,7 @@ var countdownfunction = setInterval(function() {
           <span onclick="document.getElementById('id03').style.display='none'" class="w3-button w3-display-topright w3-white">&times;</span>
           <h2>Sasha Hussain</h2>
       </div>
-      <div class="w3-container modal-body" style="font-family:courier; font-color:black;">
+      <div class="w3-container modal-body" style="font-family:courier; color:black;">
           <p>Hi, I’m Sasha Hussain and I attend Foxboro High School, in the town and home of the Patriots. I got into coding during my first hackathon, and have been doing it since.</p>
       </div>
     </div>
@@ -467,7 +467,7 @@ var countdownfunction = setInterval(function() {
           <span onclick="document.getElementById('id04').style.display='none'" class="w3-button w3-display-topright w3-white">&times;</span>
           <h2>Rachael Matthew</h2>
       </div>
-      <div class="w3-container modal-body" style="font-family:courier; font-color:black;">
+      <div class="w3-container modal-body" style="font-family:courier; color:black;">
           <p>Hi, I’m Sasha Hussain and I attend Foxboro High School, in the town and home of the Patriots. I got into coding during my first hackathon, and have been doing it since.</p>
       </div>
     </div>
@@ -497,7 +497,9 @@ var countdownfunction = setInterval(function() {
     onclick="document.getElementById('id03').style.display='block'" class="w3-hover-opacity">
   </div>
   </div>
-                                                                                            
+</div>
+         
+<div class="w3-row-padding">                                                                                           
   <div class="w3-column">                                                                                          
   <div class="w3-container w3-third">
     <img src="Screen Shot 2018-12-30 at 6.02.00 PM.png" style="width:100%;cursor:pointer" 
