--- a/index.html
+++ b/index.html
@@ -515,6 +515,8 @@ var countdownfunction = setInterval(function() {
   </div>
 </div>
 
+</div>                                      
+                                      
 <script>
 function onClick(element) {
   document.getElementById("img01").src = element.src;
