--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
 /* Create two equal columns that sits next to each other */
 .column {
-  -ms-flex: 33.3%; /* IE 10 */
-  flex: 33.3%;
+  -ms-flex: 100%; /* IE 10 */
+  flex: 100%;
   padding: 0 4px;
 }
 
@@ -745,8 +745,8 @@ html {
 
 .image {
   display: block;
-  width: 100%;
-  height: auto;
+  width: 100px;
+  height: 100px;
   padding: 10px;
 }
 
