--- a/index.html
+++ b/index.html
@@ -507,10 +507,22 @@ var countdownfunction = setInterval(function() {
     <div class="w3-modal-content">
       <div class="modal-header">
           <span onclick="document.getElementById('id06').style.display='none'" class="w3-button w3-display-topright w3-white">&times;</span>
-          <h2>Julia Wu</h2>
+          <h2>Shrujal Ambati</h2>
       </div>
       <div class="w3-container modal-body" style="font-family:courier; color:black;">
           <p>Hey, I'm Shrujal Ambati and I am a junior at the Advanced Math and Science Academy in Marlborough Massachusetts. My hobbies include playing the piano, soccer, chess and doing taekwondo. I'm also a part of my school's MUN team and love going to conferences. I love listening to country music and reading astronomy articles. I enjoy most STEM related subjects and being part of the MetroHacks team I hope that I can bring a love of STEM to more students accross New England!</p>
+      </div>
+    </div>
+  </div>
+                                                                                    
+  <div id="id07" class="w3-modal">
+    <div class="w3-modal-content">
+      <div class="modal-header">
+          <span onclick="document.getElementById('id07').style.display='none'" class="w3-button w3-display-topright w3-white">&times;</span>
+          <h2>Anuraag Nagaraja</h2>
+      </div>
+      <div class="w3-container modal-body" style="font-family:courier; color:black;">
+          <p>My name is Anuraag Nagaraja and I am a Juior at Andover High School. Ive been a member of Metrohacks for almost two years and Ive learnt so much. This platform has given me the opportunity to invest myself in helping future generations of students in the STEM and much more.</p>
       </div>
     </div>
   </div>
@@ -530,6 +542,11 @@ var countdownfunction = setInterval(function() {
   <div class="w3-container w3-third">
     <img src="Screen Shot 2018-12-30 at 6.02.00 PM.png" style="width:100%;cursor:pointer" 
     onclick="document.getElementById('id04').style.display='block'" class="w3-hover-opacity">
+  </div>
+                                                                                            
+  <div class="w3-container w3-third">
+    <img src="Image from iOS.jpg" style="width:100%;cursor:pointer" 
+    onclick="document.getElementById('id07').style.display='block'" class="w3-hover-opacity">
   </div>
 
   </div>                                                                                          
@@ -783,8 +800,8 @@ html {
 
 .image {
   display: block;
-  width: 100px;
-  height: 100px;
+  max-width: 100%;
+  max-height: auto;
   padding: 10px;
 }
 
