--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ var countdownfunction = setInterval(function() {
                                                                                             
   <div class="column">                                                                                          
   <div class="w3-container w3-third">
-    <img src="Image from iOS.jpg" style="width:100%;cursor:pointer" 
+    <img src="Image from iOS (1).jpg" style="width:100%;cursor:pointer" 
     onclick="document.getElementById('id03').style.display='block'" class="w3-hover-opacity">
   </div>
                                                                                             
