--- a/index.html
+++ b/index.html
@@ -822,6 +822,7 @@ html {
   right: 0;
   height: 100%;
   width: 100%;
+  border-radius:75%;
   opacity: 0;
   transition: .5s ease;
   background-color: #9370DB;
