--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="w3-row-padding w3-padding-64 w3-theme-l1 center" id="about"></div>
    
 
-<button class="accordion w3-hover-purple w3-white button" style="font-size:150%;">Who can come?</button>
+<button class="accordion w3-hover-rgb(95, 75, 139) w3-white button" style="font-size:150%;">Who can come?</button>
 <div class="panel">
   <p class="w3-text-black" style="text-align:center; font-family:courier; font-size:140%; ">All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</p>
 </div>
