--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
                 <source src="MetroHacksLogoLoop.mp4" type="video/mp4">
             </video>
            
+            <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-deep-purple">Register for MetroHacks Women<sup>2</sup></button>
 
+            <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-deep-purple" title="Prospectus">Sponsor</button>
         </div>
 
 </div>
