--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
             <button onclick="window.location.href = 'https://google.com';" class="btn" title="Prospectus">Sponsor</button>
             
-            <video   autoplay muted loop>
+            <video  style="width:100%; height:auto;" autoplay muted loop>
                 <source src="MetroHacksLogoLoop.mp4" type="video/mp4">
             </video>
           
