--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   backface-visibility: hidden;
 }
     
-    .container img{
+    .container{
   max-width: 100%;
   height:auto;
-  margin:none;
+  
 }
 
 .middle {
