--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="video-container">
             
             
-            <video style="max-width:100%; height:auto;" autoplay muted loop>
+            <video style="width:100%; height:auto;" autoplay muted loop>
                 <source src="MetroHacksLogoLoop.mp4" type="video/mp4">                
             </video>
             <div>
