--- a/index.html
+++ b/index.html
@@ -211,11 +211,12 @@
                 <source src="MetroHacksLogoLoop.mp4" type="video/mp4">                
             </video>
             <div>
+                <div class="enter">
             <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
 
             <button onclick="window.location.href = 'https://google.com';" class="btn" title="Prospectus">Sponsor</button>
             </div>
-             
+            </div> 
         </div>
 
 </div>
