--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="enter">
             <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
 
-            <button onclick="window.location.href = 'https://google.com';" class="btn" title="Prospectus">Sponsor</button>
+            <button onclick="window.location.href = 'https://google.com';" class="bot" title="Prospectus">Sponsor</button>
             </div>
             </div> 
         </div>
@@ -769,8 +769,25 @@ html {
   text-align: center;
 }
 
-
+  .enter .bot {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
 .enter .btn:hover {
+  background-color: teal;
+}    
+.enter .bot:hover {
   background-color: teal;
 }    
     
