--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register for MetroHacks Women<sup>2</sup></button>
     
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">exmaple<sup>2</sup></button>
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor<sup>2</sup></button>
 
 </div>
 <!-- Work Row -->
@@ -770,9 +770,9 @@ html {
 }
 .video-container .bot {
  position: absolute;
-  top: 20%;
+  top: 80%;
   left: 50%;
-  transform: translate(-80%, -50%);
+  transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: black;
   color: white;
