--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
   transition: .5s ease;
   backface-visibility: hidden;
 }
+    .container {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+}
     
-    .container{
+    .container img{
   max-width: 100%;
   height:auto;
   
