--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   width: 100%;
   max-width: 400px;
 }
-    
+    body{margin:0;}
     .container img{
   max-width: 100%;
   height:auto;
@@ -222,11 +222,11 @@
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
-  
+  <div>
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
     
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
-
+    </div>
 </div>
 <!-- Work Row -->
 
