--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
-  <div style="display:inline;">
+  <div class="row" style="display:inline;">
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
     
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
