--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
     
     .container .btn {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  //top: 50%;
+  //left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: white;
