--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
   cursor: pointer;
   border-radius: 10px;
   text-align: center;
-  display:inline-block;
 }
 
     .container .btn:hover {
@@ -223,7 +222,7 @@
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
-  <div class="row" style="display:inline;">
+  <div class="row" style="display:inline-block;">
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
     
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
